--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=renato1006
 spring.datasource.password=renato1006
 
 spring.jpa.show-sql=true
+
+server.error.include-stacktrace=never
